[package]
name = "axum-reverse-proxy"
version = "0.1.0"
authors = ["Brehl <gitlab@brehl.dev>"]
edition = "2024"

[dependencies]
axum = "0.8.4"
envy = "0.4.2"
reqwest = { version = "0.13.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }